--- a/debian/parent/amd64/pom.xml
+++ b/debian/parent/amd64/pom.xml
@@ -85,7 +85,7 @@
                 <executions>
                     <execution>
                         <id>upload-deb</id>
-                        <phase>deploy</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>upload</goal>
                         </goals>
@@ -93,11 +93,10 @@
                             <fromDir>${project.basedir}/target</fromDir>
                             <includes>*.deb</includes>                            
                             <serverId>ftp-repository</serverId>
-                            <!--                            <url>ftp://10.200.24.50</url>
-                            <toDir>/var/www/repository/unstable</toDir>-->
+                            <!--<url>ftp://10.200.24.50</url>
+                            <toDir>/home/ctcta/demoiselle-infra/unstable/</toDir>-->
                             <url>file:///opt/laboratorio/demoiselle/infra_atual/debian/unstable</url>
-                            <!--                            <toDir>unstable</toDir>-->
-                            
+                            <!--<toDir>unstable</toDir>-->
                         </configuration>
                     </execution>
                 </executions>
