--- a/debian/parent/amd64/pom.xml
+++ b/debian/parent/amd64/pom.xml
@@ -8,26 +8,26 @@
     <packaging>pom</packaging>
 
     <name>Infra amd64 Parent</name>
-    
+
     <parent>
         <groupId>br.gov.frameworkdemoiselle.infra</groupId>
         <artifactId>demoiselle-infra-parent-build</artifactId>
         <version>1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    
+
     <properties>
         <architeture>amd64</architeture>
-		<buildDirectory>${project.basedir}/target</buildDirectory>
+        <buildDirectory>${project.basedir}/target</buildDirectory>
     </properties>
 
-	<distributionManagement>
+    <distributionManagement>
         <repository>
             <id>ftp-repository</id>
-            <url>ftp://10.200.24.50:/var/www/repository/unstable/</url>
+            <url>${ftp-unstable}</url>
         </repository>
     </distributionManagement>
-  
+
     <build>
         <extensions>
             <!-- Enabling the use of FTP -->
@@ -91,18 +91,15 @@
                         </goals>
                         <configuration>
                             <fromDir>${project.basedir}/target</fromDir>
-                            <includes>*.deb</includes>                            
+                            <includes>*.deb</includes>
                             <serverId>ftp-repository</serverId>
-                            <!--<url>ftp://10.200.24.50</url>
-                            <toDir>/home/ctcta/demoiselle-infra/unstable/</toDir>-->
-                            <url>file:///opt/laboratorio/demoiselle/infra_atual/debian/unstable</url>
-                            <!--<toDir>unstable</toDir>-->
+                            <url>${files-unstable}</url>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-    </build>  
+    </build>
 
 </project>
 
