Atualização Jboss 7.1.1 e maven2-local-repo

--- a/debian/architectures/all/demoiselle-2-infra-extra/pom.xml
+++ b/debian/architectures/all/demoiselle-2-infra-extra/pom.xml
@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
     
     <description>
-        Latest extra tools on development environment for Demoiselle Framework
+        Extra tools on development environment for Demoiselle Framework
         Homepage: http://demoiselle.sourceforge.net/infra/
     </description>
 
