--- a/debian/architectures/all/demoiselle-jboss-7.1/pom.xml
+++ b/debian/architectures/all/demoiselle-jboss-7.1/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>demoiselle-jboss-7.1</artifactId>
-    <version>7.1.0</version>
+    <version>7.1.1</version>
     <packaging>pom</packaging>
     
     <description>
-        JBoss Application Server 7.1
+        JBoss Application Server 7.1.1.Final
         JBoss Application Server is an open-source Java EE-based application server.
         A Java EE certified platform for developing and deploying enterprise Java applications, Web applications, and Portals, JBoss Application Server provides the full range of Java EE 6 features as well as extended enterprise services including clustering, caching, and persistence.
         Homepage: http://www.jboss.org/
