--- a/debian/architectures/i386/demoiselle-2-infra-1/pom.xml
+++ b/debian/architectures/i386/demoiselle-2-infra-1/pom.xml
@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
   
     <description>
-        Latest complete development environment for Demoiselle Framework 2.x
+        Complete development environment for Demoiselle Framework 2.x
         Homepage: http://demoiselle.sourceforge.net/infra/
     </description>
 
