--- a/debian/parent/amd64/pom.xml
+++ b/debian/parent/amd64/pom.xml
@@ -22,14 +22,7 @@
     </properties>
 
     <build>
-        <extensions>
-            <!-- Enabling the use of FTP -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh</artifactId>
-                <version>2.2</version>
-            </extension>
-        </extensions>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -67,23 +60,22 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>wagon-maven-plugin</artifactId>
-                <version>1.0-beta-4</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
                 <executions>
                     <execution>
-                        <id>upload-deb</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>upload</goal>
-                        </goals>
+                        <phase>install</phase>
                         <configuration>
-                            <fromDir>${project.basedir}/target</fromDir>
-                            <includes>*.deb</includes>
-                            <serverId>ftp-repository</serverId>
-                            <url>${files-unstable}</url>
+                            <tasks>
+                                 <copy file="${buildDirectory}/${project.artifactId}_${project.version}_${architeture}.deb" todir="/var/www/repository/unstable/" />
+                            </tasks>
                         </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                     </execution>
+
                 </executions>
             </plugin>
         </plugins>
