--- a/debian/architectures/all/pom.xml
+++ b/debian/architectures/all/pom.xml
@@ -11,10 +11,12 @@
         Projeto que agrega todos os pacotes (.deb) que são utilizados tanto nas
         arquiteturas i386 e amd64 para o demoiselle infra
     </description>
-    
+
     <modules>
         <module>demoiselle-maven2</module>
         <module>demoiselle-maven2-local-repo</module>
+        <module>demoiselle-maven3</module>
+        <module>demoiselle-maven3-local-repo</module>
         <module>demoiselle-cassandra-gui-0.6</module>
         <module>demoiselle-tomcat-7.0</module>
         <module>demoiselle-tomcat-6.0</module>
@@ -28,15 +30,17 @@
         <module>demoiselle-wizard</module>
         <module>demoiselle-squirrel-3.1</module>
         <module>demoiselle-squirrel-3.4</module>
+        <module>demoiselle-squirrel-3.5</module>
         <module>demoiselle-soapui-3.5</module>
         <module>demoiselle-soapui-4.5</module>
         <module>demoiselle-ireport-3.0</module>
         <module>demoiselle-ireport-4.0</module>
+        <module>demoiselle-ireport-5.1</module>
         <module>demoiselle-mongobrowser-0.1</module>
         <module>demoiselle-1-infra-extra</module>
         <module>demoiselle-2-infra-extra</module>
     </modules>
-    
+
     <parent>
         <groupId>br.gov.frameworkdemoiselle.infra</groupId>
         <artifactId>demoiselle-infra-parent-build</artifactId>
