--- a/debian/architectures/i386/pom.xml
+++ b/debian/architectures/i386/pom.xml
@@ -17,9 +17,11 @@
         <module>demoiselle-eclipse-3.6</module>
         <module>demoiselle-eclipse-3.7</module>
         <module>demoiselle-eclipse-3.7-SR2</module>
+        <module>demoiselle-eclipse-4.2</module>
         <module>demoiselle-workspace</module>
         <module>demoiselle-1-infra-1</module>
         <module>demoiselle-2-infra-1</module>
+        <module>demoiselle-2-infra-2</module>
     </modules>
 
      <parent>
@@ -28,6 +30,6 @@
         <version>1.0</version>
         <relativePath>../../parent/pom.xml</relativePath>
      </parent>
-    
+
 </project>
 
