Finalizando a versão Demoiselle-2-infra-2

--- a/debian/parent/all/pom.xml
+++ b/debian/parent/all/pom.xml
@@ -42,6 +42,8 @@
                             <goal>jdeb</goal>
                         </goals>
                         <configuration>
+                            <verbose>true</verbose>
+                            <controlDir>${basedir}/src/deb/control</controlDir>
                             <deb>${buildDirectory}/${project.artifactId}_${project.version}_${architeture}.deb</deb>
                             <dataSet>
                                 <data>
