--- a/debian/parent/i386/pom.xml
+++ b/debian/parent/i386/pom.xml
@@ -29,6 +29,7 @@
                         </goals>
                         <configuration>
                             <verbose>true</verbose>
+                            <controlDir>${basedir}/src/deb/control</controlDir>
                             <deb>${buildDirectory}/${project.artifactId}_${project.version}_${architeture}.deb</deb>
                             <dataSet>
                                 <data>
