--- a/debian/parent/amd64/pom.xml
+++ b/debian/parent/amd64/pom.xml
@@ -43,6 +43,8 @@
                             <goal>jdeb</goal>
                         </goals>
                         <configuration>
+                            <verbose>true</verbose>
+                            <controlDir>${basedir}/src/deb/control</controlDir>
                             <deb>${buildDirectory}/${project.artifactId}_${project.version}_${architeture}.deb</deb>
                             <dataSet>
                                 <data>
