--- a/debian/parent/amd64/pom.xml
+++ b/debian/parent/amd64/pom.xml
@@ -35,7 +35,7 @@
             <plugin>
                 <artifactId>jdeb</artifactId>
                 <groupId>org.vafer</groupId>
-                <version>1.0.1</version>
+                <version>${versionJdeb}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -43,7 +43,7 @@
                             <goal>jdeb</goal>
                         </goals>
                         <configuration>
-                            <verbose>true</verbose>
+                            <verbose>${verbose}</verbose>
                             <controlDir>${basedir}/src/deb/control</controlDir>
                             <deb>${buildDirectory}/${project.artifactId}_${project.version}_${architeture}.deb</deb>
                             <dataSet>
