--- a/debian/parent/i386/pom.xml
+++ b/debian/parent/i386/pom.xml
@@ -23,8 +23,15 @@
 
     <build>
         <plugins>
-
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+         <plugin>
                 <artifactId>jdeb</artifactId>
                 <groupId>org.vafer</groupId>
                 <version>${versionJdeb}</version>
@@ -74,6 +81,7 @@
             </plugin>
         </plugins>
     </build>
+   
 
 </project>
 
