--- a/debian/parent/i386/pom.xml
+++ b/debian/parent/i386/pom.xml
@@ -66,7 +66,7 @@
                 <version>1.7</version>
                 <executions>
                     <execution>
-                        <phase>install</phase>
+                        <phase>${phaseDeploy}</phase>
                         <configuration>
                             <tasks>
                                 <copy file="${buildDirectory}/${project.artifactId}_${project.version}_${architeture}.deb" todir="/var/www/repository/unstable/" />
