--- a/debian/architectures/all/demoiselle-maven3/src/deb/control/control
+++ b/debian/architectures/all/demoiselle-maven3/src/deb/control/control
@@ -3,6 +3,6 @@ Version: 3.0.5-1
 Section: universe/devel
 Priority: optional
 Architecture: all
-Depends: sun-java6-jdk | sun-java5-jdk | openjdk-6-jdk | openjdk-7-jdk
+Depends: sun-java6-jdk | openjdk-6-jdk | openjdk-7-jdk
 Maintainer: Demoiselle Framework <demoiselle-infra@lists.sourceforge.net>
 Description: [[description]]
