--- a/debian/architectures/all/demoiselle-glassfish-4.0/pom.xml
+++ b/debian/architectures/all/demoiselle-glassfish-4.0/pom.xml
@@ -5,7 +5,9 @@
     <artifactId>demoiselle-glassfish-4.0</artifactId>
     <version>4.0</version>
     <packaging>pom</packaging>
-    
+
+    <name>${project.artifactId}</name>
+    <url>http://www.frameworkdemoiselle.gov.br</url>
     <description>
         GlassFish is an open-source application server project started by Sun Microsystems for the Java EE platform and now sponsored by Oracle Corporation. The supported version is called Oracle GlassFish Server. GlassFish is free software, dual-licensed under two free software licences: the Common Development and Distribution License (CDDL) and the GNU General Public License (GPL) with the classpath exception.
 GlassFish is the reference implementation of Java EE and as such supports Enterprise JavaBeans, JPA, JavaServer Faces, JMS, RMI, JavaServer Pages, servlets, etc. This allows developers to create enterprise applications that are portable and scalable, and that integrate with legacy technologies. Optional components can also be installed for additional services.
