--- a/debian/architectures/all/demoiselle-ireport-5.1/pom.xml
+++ b/debian/architectures/all/demoiselle-ireport-5.1/pom.xml
@@ -6,6 +6,8 @@
     <version>5.1</version>
     <packaging>pom</packaging>
 
+    <name>${project.artifactId}</name>
+    <url>http://www.frameworkdemoiselle.gov.br</url>
     <description>
         iReport is the free, open source report designer for JasperReports.
         Create very sophisticated layouts containing charts, images, subreports, crosstabs and much more.
