--- a/debian/architectures/all/demoiselle-maven-repo/pom.xml
+++ b/debian/architectures/all/demoiselle-maven-repo/pom.xml
@@ -6,6 +6,8 @@
     <version>3.0.5</version>
     <packaging>pom</packaging>
 
+    <name>${project.artifactId}</name>
+    <url>http://www.frameworkdemoiselle.gov.br</url>
     <description>
         Initial Maven local repository and settings for sharing it among all system users
         Homepage: http://demoiselle.sourceforge.net/infra/demoiselle-maven2-local-repo/
