--- a/debian/architectures/all/demoiselle-nimble-1.1/pom.xml
+++ b/debian/architectures/all/demoiselle-nimble-1.1/pom.xml
@@ -6,6 +6,8 @@
     <version>1.1</version>
     <packaging>pom</packaging>
 
+    <name>${project.artifactId}</name>
+    <url>http://www.frameworkdemoiselle.gov.br</url>
     <description>
         Automated processing tool for Demoiselle Framework
         Homepage: http://demoiselle.sourceforge.net/tools/nimble/
