--- a/debian/architectures/all/demoiselle-soapui-4.5/pom.xml
+++ b/debian/architectures/all/demoiselle-soapui-4.5/pom.xml
@@ -5,7 +5,9 @@
     <artifactId>demoiselle-soapui-4.5</artifactId>
     <version>4.5.1</version>
     <packaging>pom</packaging>
-    
+
+    <name>${project.artifactId}</name>
+    <url>http://www.frameworkdemoiselle.gov.br</url>
     <description>
         Desktop application for inspecting Web Services
         SoapUI is the leading desktop application for inspecting, invoking, monitoring, simulating/mocking and functional/load/compliance/surveillance testing of REST/WADL and SOAP/WSDL-based Web Services over HTTP.
