--- a/debian/architectures/all/demoiselle-glassfish-4.0/src/deb/control/control
+++ b/debian/architectures/all/demoiselle-glassfish-4.0/src/deb/control/control
@@ -3,6 +3,6 @@ Version: 4.0-1
 Section: universe/java
 Priority: optional
 Architecture: all
-Depends: openjdk-7-jdk | sun-java7-jdk | openjdk-7-jdk
+Depends: openjdk-7-jdk | sun-java7-jdk
 Maintainer: Demoiselle Framework <demoiselle-infra@lists.sourceforge.net>
 Description: [[description]]
