--- a/debian/architectures/amd64/demoiselle-eclipse-4.3/src/deb/control/control
+++ b/debian/architectures/amd64/demoiselle-eclipse-4.3/src/deb/control/control
@@ -2,7 +2,7 @@ Package: [[name]]
 Version: 4.3-1
 Section: universe/devel
 Priority: standard
-Architecture: i386
+Architecture: amd64
 Depends: openjdk-6-jdk | sun-java6-jdk | openjdk-7-jdk
 Maintainer: Demoiselle Framework <demoiselle-infra@lists.sourceforge.net>
 Description: [[description]]
