Versão 1.3 demoiselle-2-infra-2

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@
 /debian/architectures/i386/demoiselle-eclipse-4 (cópia).2/target/
 /debian/architectures/i386/demoiselle-eclipse-4.3/target/
 /debian/architectures/amd64/demoiselle-eclipse-4.3/target/
+/site/demoiselle-infra/target/
