--- a/debian/architectures/i386/demoiselle-eclipse-4.3/src/deb/control/control
+++ b/debian/architectures/i386/demoiselle-eclipse-4.3/src/deb/control/control
@@ -3,6 +3,6 @@ Version: 4.3-1
 Section: universe/devel
 Priority: standard
 Architecture: i386
-Depends: openjdk-6-jdk | sun-java6-jdk | openjdk-7-jdk
+Depends: openjdk-7-jdk | openjdk-6-jdk | sun-java6-jdk
 Maintainer: Demoiselle Framework <demoiselle-infra@lists.sourceforge.net>
 Description: [[description]]
