--- a/site/demoiselle-infra/pom.xml
+++ b/site/demoiselle-infra/pom.xml
@@ -79,12 +79,19 @@ ou escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-                <version>2.1</version>
+                <version>3.3</version>
                 <configuration>
                     <inputEncoding>${encoding.default}</inputEncoding>
                     <outputEncoding>${encoding.default}</outputEncoding>
                     <locales>pt_BR,en</locales>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.wagon</groupId>
+                        <artifactId>wagon-ssh</artifactId>
+                        <version>2.4</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
