--- a/debian/architectures/all/pom.xml
+++ b/debian/architectures/all/pom.xml
@@ -24,6 +24,7 @@
         <module>demoiselle-soapui-4.5</module>
         <module>demoiselle-ireport-5.1</module>
         <module>demoiselle-2-infra-extra</module>
+	<module>demoiselle-2-infra-lab</module>
     </modules>
 
     <parent>
