--- a/debian/architectures/all/demoiselle-maven-repo/pom.xml
+++ b/debian/architectures/all/demoiselle-maven-repo/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demoiselle-maven-repo-3</artifactId>
+    <artifactId>demoiselle-maven-repo</artifactId>
     <version>3.1.0</version>
     <packaging>pom</packaging>
 
