--- a/debian/architectures/all/demoiselle-tomcat/src/deb/control/control
+++ b/debian/architectures/all/demoiselle-tomcat/src/deb/control/control
@@ -1,8 +1,8 @@
 Package: [[name]]
-Version: 7.0.5-2
+Version: 7.0.54
 Section: universe/java
 Priority: optional
 Architecture: all
-Depends: openjdk-7-jdk | openjdk-6-jdk | sun-java6-jdk | sun-java6-jdk | serpro-java6-jdk | oracle-jdk7-installer 
+Depends: openjdk-7-jdk | openjdk-6-jdk | sun-java6-jdk | serpro-java6-jdk | oracle-jdk7-installer 
 Maintainer: Demoiselle Framework <demoiselle-users@lists.sourceforge.net>
 Description: [[description]]
