--- a/debian/architectures/all/demoiselle-nimble/src/data/usr/share/applications/demoiselle-nimble.desktop
+++ b/debian/architectures/all/demoiselle-nimble/src/data/usr/share/applications/demoiselle-nimble.desktop
@@ -3,7 +3,7 @@ Categories=Development;
 Comment=Template processing tool for generate Code for Demoiselle Framework
 Comment[pt_BR]=Processador de templates para geração de código para o Demoiselle Framework.
 Encoding=UTF-8
-Exec=/opt/demoiselle/tool/nimble-1.2.0/bin/nimble-gui.sh
+Exec=/opt/demoiselle/tool/nimble/bin/nimble-gui.sh
 GenericName= Demoiselle Nimble
 GenericName[pt_BR]= Demoiselle Nimble
 Icon=demoiselle-nimble.png
@@ -20,4 +20,3 @@ Type=Application
 URL=
 X-KDE-SubstituteUID=false
 X-KDE-Username=root
-
