--- a/debian/architectures/amd64/demoiselle-2-infra/src/deb/control/control
+++ b/debian/architectures/amd64/demoiselle-2-infra/src/deb/control/control
@@ -1,9 +1,9 @@
 Package: [[name]]
-Version: 3.0
+Version: 1.0
 Section: universe/devel
 Priority: standard
 Architecture: amd64
-Depends: demoiselle-eclipse-4.3.2, maven(>=3.0.4) | demoiselle-maven-3 (>=3.0.5), demoiselle-maven-repo-3 (>=3.1.0), demoiselle-workspace (>=2.0), demoiselle-tomcat-7.0 (>=7.0), demoiselle-jboss-7.1 (>=7.1.1)
+Depends: demoiselle-eclipse-4.4(>=4.4.0), maven(>=3.0.4) | demoiselle-maven-3 (>=3.0.5), demoiselle-maven-repo (>=3.1.0), demoiselle-workspace (>=2.0), demoiselle-tomcat-7.0 (>=7.0), demoiselle-jboss-7.1 (>=7.1.1)
 Suggests: demoiselle-2-infra-extra (>=2.0)
 Maintainer: Demoiselle Framework <demoiselle-users@lists.sourceforge.net>
 Description: [[description]]
