--- a/site/pom.xml
+++ b/site/pom.xml
@@ -19,17 +19,17 @@ ou escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth
 
     <groupId>br.gov.demoiselle.infra</groupId>
     <artifactId>demoiselle-infra-site</artifactId>
-    <version>1.3.0</version>
+    <version>2.0.0</version>
 
     <packaging>pom</packaging>
 
     <name>Site Maven - Demoiselle Infra</name>
-    <description>Pacotes Debian para preparação do ambiente de desenvolvimento e produção do Demoiselle Framework.</description>
+    <description>Pacotes de softwares para ambiente de desenvolvimento com Demoiselle Framework.</description>
     <url>http://demoiselle.sourceforge.net/infra/</url>
 
     <organization>
-        <name>SERPRO</name>
-        <url>http://www.serpro.gov.br</url>
+        <url>http://www.frameworkdemoiselle.gov.br</url>
+        <name>Comunidade Demoiselle</name>
     </organization>
 
     <licenses>
@@ -103,12 +103,6 @@ ou escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth
             <organization>SERPRO</organization>
             <roles />
         </developer>
-        <developer>
-            <name>Paulo Gladson Ximenes Pinheiro</name>
-            <email>paulo.pinheiro@serpro.gov.br</email>
-            <organization>SERPRO</organization>
-            <roles />
-        </developer>
     </developers>
 
     <contributors>
@@ -154,6 +148,12 @@ ou escreva para a Fundação do Software Livre (FSF) Inc., 51 Franklin St, Fifth
             <email>paulo-fernando.gontijo@serpro.gov.br</email>
             <organization>SERPRO</organization>
             <roles />
+        </contributor>
+        <contributor>
+            <name>Paulo Gladson Ximenes Pinheiro</name>
+            <email>paulo.pinheiro@serpro.gov.br</email>
+            <organization>SERPRO</organization>
+            <roles />        
         </contributor>
         <contributor>
             <name>Rodrigo Hjort</name>
