--- a/debian/architectures/i386/demoiselle-soapui/pom.xml
+++ b/debian/architectures/i386/demoiselle-soapui/pom.xml
@@ -14,10 +14,10 @@
     </description>
 
 	<parent>
-		<groupId>br.gov.frameworkdemoiselle.infra.all</groupId>
-		<artifactId>demoiselle-infra-all-parent</artifactId>
+		<groupId>br.gov.frameworkdemoiselle.infra.i386</groupId>
+		<artifactId>demoiselle-infra-i386-parent</artifactId>
 		<version>1.0</version>
-		<relativePath>../../../parent/all/pom.xml</relativePath>
+		<relativePath>../../../parent/i386/pom.xml</relativePath>
 	</parent>
 
 	<build>
@@ -55,5 +55,5 @@
 
 		</plugins>
 	</build>
-	<version>5.0.0</version>
+	<version>5.1.3</version>
 </project>
