--- a/debian/architectures/i386/demoiselle-eclipse/pom.xml
+++ b/debian/architectures/i386/demoiselle-eclipse/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>demoiselle-eclipse-4.4</artifactId>
+	<artifactId>demoiselle-eclipse-4.4.2</artifactId>
 	<packaging>pom</packaging>
 
 	<name>${project.artifactId}</name>
@@ -64,5 +64,5 @@
 
 		</plugins>
 	</build>	
-	<version>4.4.0-1</version>
+	<version>4.4.2</version>
 </project>
