--- a/debian/architectures/i386/demoiselle-eclipse/src/data/usr/share/applications/demoiselle-eclipse.desktop
+++ b/debian/architectures/i386/demoiselle-eclipse/src/data/usr/share/applications/demoiselle-eclipse.desktop
@@ -1,12 +1,11 @@
 [Desktop Entry]
-Name=Demoiselle Eclipse 4.4.0
+Name=Demoiselle Eclipse 4.4.2
 Comment=Eclipse Luna: IDE  for Java Developers with plugins and features needed by Demoiselle Framework
-# Exec=/opt/demoiselle/ide/eclipse-4.4.0/eclipse
-Exec=sh /opt/demoiselle/ide/eclipse-4.4.0/exec_eclipse.sh
+Exec=/opt/demoiselle/ide/eclipse-4.4.2/eclipse
 Icon=demoiselle-eclipse.xpm
 Terminal=false
 Type=Application
 Categories=Development;IDE;Java;
 StartupNotify=true
 MimeType=text/html;
-Name[pt_BR]=Demoiselle Eclipse 4.4.0
+Name[pt_BR]=Demoiselle Eclipse 4.4.2
