--- a/documentation/reference/pom.xml
+++ b/documentation/reference/pom.xml
@@ -73,5 +73,5 @@
 	<properties>
 		<project.context>infra/reference</project.context>
 	</properties>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.1.0</version>
 </project>
