--- a/debian/architectures/amd64/demoiselle-soapui/pom.xml
+++ b/debian/architectures/amd64/demoiselle-soapui/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>demoiselle-soapui</artifactId>
+	<artifactId>demoiselle-soapui-5.1</artifactId>
 	<packaging>pom</packaging>
 
 	<name>${project.artifactId}</name>
@@ -55,5 +55,5 @@
 
 		</plugins>
 	</build>
-	<version>5.0.0</version>
+	<version>5.1.3</version>
 </project>
