https://demoiselle.atlassian.net/browse/DIII-28

--- a/debian/architectures/all/demoiselle-nimble/src/data/usr/share/applications/demoiselle-nimble.desktop
+++ b/debian/architectures/all/demoiselle-nimble/src/data/usr/share/applications/demoiselle-nimble.desktop
@@ -3,13 +3,13 @@ Categories=Development;
 Comment=Template processing tool for generate Code for Demoiselle Framework
 Comment[pt_BR]=Processador de templates para geração de código para o Demoiselle Framework.
 Encoding=UTF-8
-Exec=/opt/demoiselle/tool/nimble/bin/nimble-gui.sh
+Exec=/opt/demoiselle/tool/nimble-2.1.1/bin/nimble-gui.sh
 GenericName= Demoiselle Nimble
 GenericName[pt_BR]= Demoiselle Nimble
 Icon=demoiselle-nimble.png
 MimeType=
-Name=Demoiselle Nimble 1.2.0
-Name[pt_BR]=Demoiselle Nimble 1.2.0
+Name=Demoiselle Nimble 1.2.1
+Name[pt_BR]=Demoiselle Nimble 1.2.1
 Path=/tmp
 ServiceTypes=
 SwallowExec=
