--- a/debian/architectures/amd64/demoiselle-eclipse/pom.xml
+++ b/debian/architectures/amd64/demoiselle-eclipse/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>demoiselle-eclipse-4.4.2</artifactId>
-    <version>4.4.2</version>
+    <version>4.4.2-1</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
