https://demoiselle.atlassian.net/projects/DIII/issues/DIII-29

--- a/documentation/reference/pom.xml
+++ b/documentation/reference/pom.xml
@@ -74,4 +74,5 @@
 		<project.context>infra/reference</project.context>
 	</properties>
 	<version>2.1.0</version>
+	<packaging>jdocbook</packaging>
 </project>
