--- a/debian/architectures/i386/demoiselle-soapui/src/deb/control/control
+++ b/debian/architectures/i386/demoiselle-soapui/src/deb/control/control
@@ -1,8 +1,8 @@
 Package: [[name]]
-Version: 5.1.3
+Version: 5.2.1-1
 Section: universe/devel
 Priority: standard
 Architecture: i386
-Depends: openjdk-7-jdk | openjdk-6-jdk | sun-java6-jdk | sun-java6-jdk | serpro-java6-jdk | oracle-jdk7-installer | java-6-serpro | java-7-serpro
+Depends: openjdk-7-jdk | openjdk-8-jdk | oracle-jdk7-installer | java-7-serpro | oracle-jdk8-installer | oracle-jdk7-installer | serpro-oracle-jdk-7u79 | serpro-oracle-jdk-8u92
 Maintainer: Demoiselle Framework <demoiselle-users@lists.sourceforge.net>
 Description: [[description]]
